--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 texts/
+/app/frontend/index-back.html
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -238,3 +239,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
